# CARL-Air-Brake-Motherboard-Software

./: .gitignore  README.md
config/: actuator.conf  calibrator.conf  controller.conf  detector.conf  estimator.conf  instrument.conf  recorder.conf  simulator.conf  streamer.conf
script/: actuation.sh  arming.sh  calibration.sh  flight.sh  measurement.sh  simulation.sh
source/: CMakeLists.txt
source/app/: CMakeLists.txt
source/app/source/: actuator.cpp  calibrator.cpp  controller.cpp  dashboard.cpp  detector.cpp  estimator.cpp  instrument.cpp  memory.cpp  recorder.cpp  simulator.cpp  streamer.cpp
source/lib/: CMakeLists.txt
source/lib/include/dat/: csvread.hpp  csvwrite.hpp  txtwrite.hpp
source/lib/include/dev/: bmp388.h  bmp388.hpp  bno055.h  bno055.hpp  clock.h  i2c.h  i2c.hpp  servo.h  servo.hpp
source/lib/include/dyn/: cntrl.hpp  estim.hpp  simul.hpp
source/lib/include/ipc/: channel.hpp  sema.hpp  semaphore.hpp  sharedmem.hpp  shmem.hpp
source/lib/include/math/: lapack.hpp  linalg.hpp  randn.hpp  randnum.hpp
source/lib/include/sys/: config.hpp  interrupt.hpp  logging.hpp  option.hpp  timing.hpp
source/lib/include/term/: console.h  display.h  panel.h
source/lib/include/ui/: console.hpp  input.hpp  output.hpp  panel.hpp  screen.hpp  term.hpp  terminal.hpp
source/lib/include/util/: config.h  log.h
source/lib/source/dat/: csvread.cpp  csvwrite.cpp  txtwrite.cpp
source/lib/source/dev/: bmp388.cpp  bno055.cpp  i2c.cpp  servo.cpp
source/lib/source/dyn/: cntrl.cpp  estim.cpp  simul.cpp
source/lib/source/ipc/: channel.cpp  sema.cpp  semaphore.cpp  sharedmem.cpp  shmem.cpp
source/lib/source/math/: lapack.cpp  linalg.cpp  randn.cpp  randnum.cpp
source/lib/source/sys/: config.cpp  interrupt.cpp  logging.cpp  option.cpp  timing.cpp
source/lib/source/ui/: console.cpp  input.cpp  output.cpp  panel.cpp  screen.cpp  term.cpp  terminal.cpp
source/lib/src/dev/: bmp388.c  bno055.c  clock.c  i2c.c  servo.c
source/lib/src/term/: console.c  display.c  panel.c
source/lib/src/util/: config.c  log.c
source/lib/template/sys/: logging.tpp
source/lib/template/ui/: term.tpp
source/unit/: CMakeLists.txt
source/unit/source/: actuator.cpp  calibrator.cpp  controller.cpp  dashboard.cpp  detector.cpp  estimator.cpp  instrument.cpp  memory.cpp  recorder.cpp  simulator.cpp  streamer.cpp
